--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-URI=mongodb://127.0.0.1:27017/socialmedia
+URI=mongodb+srv://rajpootashish0602:CIOJuhGwdWv4OwXG@cluster0.pbhalqr.mongodb.net/whatsapp?retryWrites=true&w=majority
 PORT=8080
 JWT_SECRET_KEY = supersecretkey8175
