--- a/socket/package.json
+++ b/socket/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "nodemon": "^2.0.22",
     "socket.io": "^4.7.1"
   }
